tests/miz/pass/types/pass_type_elaboration_reserved_variable_membership_001.miz
reserve x for set;
theorem ReservedVariableMembershipPayloadBoundary: x in x;
