tests/miz/fail/types/fail_type_elaboration_builtin_membership_formula_gap_001.miz
theorem BuiltinMembershipPayloadBoundary: 1 in 1;
